Fix CORS error by allowing production origins